# libedgetpu

./: .bazelrc  .bazelrc.armv6  .gitignore  BUILD  CONTRIBUTING.md  Makefile  README.md  WORKSPACE  build.bat  build_defs.bzl  error_codes.armv6.h  libedgetpu_cc_rules.bzl  meson.build  meson_options.txt  rename_library.py  workspace.armv6.bzl  workspace.bzl  workspace_armv6.bzl
api/: BUILD  allocated_buffer.cc  allocated_buffer.h  buffer.cc  buffer.h  chip.h  dram_buffer.h  driver.h  driver_factory.cc  driver_factory.h  driver_options.fbs  driver_options_helper.cc  driver_options_helper.h  execution_context_interface.h  layer_information.cc  layer_information.h  meson.build  package_reference.h  request.h  runtime_version.h  telemeter_interface.h  tensor_util.cc  tensor_util.h  timing.h  watchdog.cc  watchdog.h
driver/: BUILD  aligned_allocator.cc  aligned_allocator.h  allocator.cc  allocator.h  bitfield.h  default_telemeter.h  device_buffer.cc  device_buffer.h  device_buffer_mapper.cc  device_buffer_mapper.h  dma_chunker.cc  dma_chunker.h  dma_info.cc  dma_info.h  dma_info_extractor.cc  dma_info_extractor.h  dma_scheduler.h  driver.cc  driver.h  driver_factory.cc  driver_factory.h  driver_factory_darwin.cc  driver_factory_default.cc  driver_factory_windows.cc  driver_helper.cc  driver_helper.h  executable_util.cc  executable_util.h  hardware_structures.h  instruction_buffers.cc  instruction_buffers.h  libdarwinn_driver.lds  meson.build  mmio_driver.cc  mmio_driver.h  package_registry.cc  package_registry.h  package_verifier.cc  package_verifier.h  (+14 more)
driver/beagle/: BUILD  beagle_ioctl.h  beagle_kernel_top_level_handler.cc  beagle_kernel_top_level_handler.h  beagle_pci_driver_provider.cc  beagle_pci_driver_provider.h  beagle_pci_driver_provider_linux.cc  beagle_pci_driver_provider_windows.cc  beagle_top_level_handler.cc  beagle_top_level_handler.h  beagle_top_level_interrupt_manager.cc  beagle_top_level_interrupt_manager.h  beagle_usb_driver_provider.cc  meson.build
driver/config/: BUILD  apex_csr_offsets.h  beagle_csr_helper.h  breakpoint_csr_offsets.h  cb_bridge_csr_offsets.h  chip_config.h  chip_structures.h  common_csr_helper.h  debug_hib_user_csr_offsets.h  debug_scalar_core_csr_offsets.h  debug_tile_csr_offsets.h  hib_kernel_csr_offsets.h  hib_user_csr_offsets.h  interrupt_csr_offsets.h  lpm_csr_offsets.h  memory_csr_offsets.h  meson.build  misc_csr_offsets.h  msix_csr_offsets.h  power_throttle_csr_helper.h  queue_csr_offsets.h  register_constants.h  register_file_csr_offsets.h  scalar_core_csr_offsets.h  scu_csr_offsets.h  sync_flag_csr_offsets.h  tile_config_csr_offsets.h  tile_csr_offsets.h  tile_thread_csr_offsets.h  tile_thread_trace_csr_offsets.h  trace_csr_offsets.h  usb_csr_offsets.h  wire_csr_offsets.h
driver/interrupt/: BUILD  dummy_interrupt_controller.h  grouped_interrupt_controller.cc  grouped_interrupt_controller.h  interrupt_controller.cc  interrupt_controller.h  interrupt_controller_interface.h  interrupt_handler.h  meson.build  top_level_interrupt_manager.cc  top_level_interrupt_manager.h  wire_interrupt_handler.cc  wire_interrupt_handler.h
driver/kernel/: BUILD  common_gasket_ioctl.inc  gasket_ioctl.h  kernel_coherent_allocator.cc  kernel_coherent_allocator.h  kernel_event.cc  kernel_event.h  kernel_event_handler.cc  kernel_event_handler.h  kernel_interrupt_handler.cc  kernel_interrupt_handler.h  kernel_mmu_mapper.cc  kernel_mmu_mapper.h  kernel_registers.cc  kernel_registers.h  kernel_wire_interrupt_handler.cc  kernel_wire_interrupt_handler.h  linux_gasket_ioctl.h  meson.build
driver/memory/: BUILD  address_space.h  address_space_allocator.h  address_utilities.h  buddy_address_space.cc  buddy_address_space.h  buddy_allocator.cc  buddy_allocator.h  dma_direction.h  dram_allocator.h  dual_address_space.cc  dual_address_space.h  fake_dram_allocator.cc  fake_dram_allocator.h  fake_mmu_mapper.cc  fake_mmu_mapper.h  meson.build  mmio_address_space.cc  mmio_address_space.h  mmu_mapper.cc  mmu_mapper.h  nop_address_space.cc  nop_address_space.h  null_dram_allocator.h
driver/mmio/: BUILD  coherent_allocator.cc  coherent_allocator.h  host_queue.h  meson.build
driver/registers/: BUILD  meson.build  registers.cc  registers.h  socket_registers.cc  socket_registers.h
driver/time_stamper/: driver_time_stamper.cc  driver_time_stamper.h  driver_time_stamper_factory.h  time_stamper.h  time_stamper_factory.h
driver/usb/: BUILD  gen_usb_latest_firmware.sh  libusb_options.h  libusb_options_default.cc  libusb_options_windows.cc  local_usb_device.cc  local_usb_device.h  meson.build  usb_device_interface.h  usb_dfu_commands.cc  usb_dfu_commands.h  usb_dfu_util.cc  usb_dfu_util.h  usb_driver.cc  usb_driver.h  usb_io_request.cc  usb_io_request.h  usb_ml_commands.cc  usb_ml_commands.h  usb_registers.cc  usb_registers.h  usb_standard_commands.cc  usb_standard_commands.h
driver_shared/time_stamper/: BUILD  driver_time_stamper.cc  driver_time_stamper.h  driver_time_stamper_factory.h  (+3 more)
executable/: BUILD  executable.fbs  meson.build
port/: BUILD  aligned_malloc.h  array_slice.h  blocking_counter.cc  blocking_counter.h  builddata.h  casts.h  cleanup.h  defs.h  demangle.h  dma_manager.h  errors.h  fileio.h  fileio_linux.h  fileio_windows.cc  fileio_windows.h  gflags.h  integral_types.h  logging.h  macros.h  math_util.h  meson.build  mutex.h  openssl.h  posix_time.cc  posix_time.h  protobuf_helper.h  ptr_util.h  semaphore.h  shared_mutex.cc  shared_mutex.h  status.h  status_macros.h  statusor.h  std_mutex_lock.h  string_util.h  stringprintf.h  thread_annotations.h  time.h  timer.h  (+10 more)
tflite/: BUILD  custom_op.cc  custom_op.h  custom_op_data.cc  custom_op_data.h  custom_op_direct.cc  custom_op_user_data_direct.cc  custom_op_user_data_direct.h  custom_op_wrapped_buffer.h  edgetpu_c.cc  edgetpu_context_direct.cc  edgetpu_context_direct.h  edgetpu_context_factory.cc  edgetpu_context_factory.h  edgetpu_delegate_for_custom_op.cc  edgetpu_delegate_for_custom_op.h  edgetpu_delegate_for_custom_op_tflite_plugin.cc  edgetpu_manager_direct.cc  edgetpu_manager_direct.h  meson.build
(+108 files in other folders)
